--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src"],
+  "include": ["src", "test.ts"],
   "compilerOptions": {
     "declaration": true, //让tsc自动生成对用的.d.ts文件。
     "outDir": "./dist", //指定输出文件夹
