完成接口快速调用(未完成返回类型约束)

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "tsx test.ts"
   },
   "dependencies": {
     "ws": "^8.16.0"
