解决重复导出的问题

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "OpenShamrock"
   ],
   "author": "huan_kong",
-  "repository": "https://github.com/huankong233/node-open-shamrock",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/huankong233/node-open-shamrock.git"
+  },
   "bugs": {
     "url": "https://github.com/huankong233/node-open-shamrock/issues"
   },
